/* 
  Localizable.strings
  WeldLearn

  Created by JWSScott777 on 1/12/21.
  
*/
/* GENERAL STRINGS */

"OK" = "OK";
"Delete" = "Delete";
"Cancel"= "Cancel";
"Basic settings" = "Basic settings";

/* A username and a message the user posted */
"%@: %@" = "%@: %@";



/* MAIN ACTIVITIES */

"Home" = "Home";
"Open" = "Open";
"Closed" = "Closed";
"Community" = "Community";
"Awards" = "Awards";



/* HOME VIEW */

"Up next" = "Up next";
"More to explore" = "More to explore";
"%@, %lld items, %g%% complete" = "%@, %lld items, %g%% complete";



/* PROJECTS VIEW */

"Open Projects" = "Open Projects";
"Closed Projects" = "Closed Projects";
"Add Project" = "Add Project";
"Add New Item" = "Add New Item";
"Nothing here right now" = "Nothing here right now";

/* A button that shows a menu with the following options */
"Sort" = "Sort";
"Sort items" = "Sort items"; /* The title of the menu */
"Optimized" = "Optimized"; /* Sort using an optimized algorithm */
"Creation Date" = "Creation Date"; /* Sort by the date items were created */
"Title" = "Title"; /* Sort by item title */

/* Default names for a new project and a new item */
"New Project" = "New Project";
"New Item" = "New Item";

"%@, completed" = "%@ completed";
"%@ high priority" = "%@ high priority";

/* EDITING PROJECTS */
"Edit Project" = "Edit Project";
"Project name" = "Project name";
"Description of this project" = "Description of this project";
"Custom project color" = "Custom project color";

/* Options to close (mark as finished), open (mark as unfinished), or delete a project. */
"Close this project" = "Close this project";
"Closing a project moves it from the Open to Closed tab" = "Closing a project moves it from the Open to Closed tab";
"Reopen  project" = "Reopen  project";
"Delete this project" = "Delete this project";
"Delete project?" = "Delete project?";
"Are you sure you want to delete this project? " = "Are you sure you want to delete this project? ";

"Select a project color" = "Select a project color";
"Pink" = "Pink";
"Purple" = "Purple";
"Red" = "Red";
"Orange" = "Orange";
"Gold" = "Gold";
"Green" = "Green";
"Teal" = "Teal";
"Light Blue" = "Light Blue";
"Dark Blue" = "Dark Blue";
"Midnight" = "Midnight";
"Dark Gray" = "Dark Gray";
"Gray" = "Gray";

"Project reminders" = "Project Reminders";
"Show Reminders" = "Show Reminders";
"Ughh" = "Ughh";
"Make sure notifications are enabled" = "Make sure notifications are enabled";
"Check Settings" = "Check Settings";
"Reminder Time" = "Reminder Time";


/* EDITING ITEMS */
"Edit Item" = "Edit Item";
"Item name" = "Item name";
"Description" = "Description";
"Priority" = "Priority";
"Low" = "Low";
"Medium" = "Medium";
"High" = "High";

"Mark Completed" = "Mark Completed"; /* Mark this item as being completed (finished/accomplished) */



/* AWARDS */

"Locked" = "Locked";
"Unlocked: %@" = "Unlocked: %@";

/* COMMUNITY */

"Shared Projects" = "Shared Projects";
"Chat about this project…" = "Chat about this project…";
"You're all set!" = "You're all set!";
"Sorry, there was an error." = "Sorry, there was an error.";
"Please sign in" = "Please sign in";
"There was an error" = "There was an error";
"Send" = "Send";
"Enter your message" = "Enter your message";
"Sign in to comment" = "Sign in to comment";
"No results" = "No results";
"In order to keep our community safe, we ask that you sign in before commenting on a project.\n\nWe don't track your personal information; your name is used for display purposes only.\n\nPlease note: we reserve the right to remove messages that are inappropriate or offensive." = "In order to keep our community safe, we ask that you sign in before commenting on a project.\n\nWe don't track your personal information; your name is used for display purposes only.\n\nPlease note: we reserve the right to remove messages that are inappropriate or offensive.";

"There was a problem communicating with iCloud; please check your network connection and try again." = "There was a problem communicating with iCloud; please check your network connection and try again.";
"There was a problem with your iCloud account; please check that you're logged in to iCloud." = "There was a problem with your iCloud account; please check that you're logged in to iCloud.";
"You've hit iCloud's rate limit; please wait a moment then try again." = "You've hit iCloud's rate limit; please wait a moment then try again.";
"You've exceeded your iCloud quota; please clear up some space then try again." = "You've exceeded your iCloud quota; please clear up some space then try again.";


// Unlocking premium
"Get Unlimited Projects" = "Get Unlimited Projects";
"You can add three projects for free, or pay %@ to add unlimited projects." = "You can add three projects for free, or pay %@ to add unlimited projects.";
"If you already bought the unlock on another device, press Restore Purchases." = "If you already bought the unlock on another device, press Restore Purchases.";
"Restore Purchases" = "Restore Purchases";
"Sorry, there was an error loading the store. Please try again later." = "Sorry, there was an error loading the store. Please try again later.";
"Unlock for %@" = "Unlock for %@";
"Loading…" = "Loading…";
"Thank you!" = "Thank you!";
"Thank you! Your request is pending approval, but you can carry on using the app in the meantime." = "Thank you! Your request is pending approval, but you can carry on using the app in the meantime.";
"Dismiss" = "Dismiss";



/* OTHER STRINGS */

/* Shown by default when the user hasn't select a project or item */
"Please select something from the menu to begin." = "Please select something from the menu to begin.";

